# RubikG

./: .gitignore  CMakeLists.txt  Rubik.kdev4  all_includes.h  main.cpp
.kdev4/: Rubik.kdev4
CLi/: CMakeLists.txt
CLi/include/: cli.h  def_colors.h  text_output.h
CLi/source/: _intro_screen.cpp  cli.cpp  def_colors.cpp  repl.cpp  repl_autocomp.cpp
core/: CMakeLists.txt
core/include/: auxiliary.h  base_types.h  basic_functions.h  def_colors.h  global.h  oriented_cube.h  rubiks_cube.h  simplex.h  text_output.h
core/source/: auxiliary.cpp  def_colors.cpp  oriented_cube.cpp  simplex.cpp
core/template_h/: cube_basic_rotations.h  cube_framework.h  cube_node.h  cube_positions.h  cube_rotations.h  cube_stack.h  rubik.h  rubik_cli.h
doc/: document_HU.rtf
engine/: CMakeLists.txt
engine/include/: cache.h  cache_generator.h  cache_node.h  containers.h  cube_node.h  engine.h  engine2.h  insight.h  lcache.h  lcache_generator.h  qeueu.h  sentinel.h  sentinel2.h  sequence.h  slot.h  state.h
engine/source/: cache.cpp  engine.cpp  search_engine.cpp
engine/template_cpp/: engine.cpp  engine_search.cpp  sentinel2.cpp
test/: CMakeLists.txt  test.h  u_cframework.h
test/common/: test_common.cpp  test_launchers.cpp
test/core/: u_cframework.cpp  u_crotations.cpp  u_simplex.cpp
test/engine/: u_engine.cpp  u_state.cpp
test/include/: test.h
test/source/: test.cpp  u_simplex.cpp
